--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>APLICATIVOS MOVILES</title>
+    <style>
 
+    </style>
+</head>
+<body>
+    <h1>Aplicativos moviles</h1>
+    <h2>botones</h2>
+    <input type="submit" value="Agregar">
+    <input type="reset" value="Eliminar">
+    <input type="button" value="Modificar">
+
+
+</body>
+</html>
