--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 <body>
     <h1>Aplicativos moviles</h1>
     <h2>botones</h2>
+    <label>Nombres</label>
+    <input type="text" name="txtNombre" id="txtNombre" required>
+    <label>Apellidos</label>
+    <input type="text" name="txtApellido" id="txtApellido" required>
+    <label>Correo</label>
+    <input type="email" name="txtCorreo" id="txtCorreo" required placeholder="nombre@dominio">
+    <hr>
     <input type="submit" value="Agregar">
     <input type="reset" value="Eliminar">
     <input type="button" value="Modificar">
-
 
 </body>
 </html>
